# code-auditor-ai

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: f42d2cebd944_initial_schema.py
src/agents/: code_auditor_agent.py  github_client.py  llm_client.py
src/analyzers/: ast_analyzer.py  base.py  secret_detector.py
src/api/: deps.py
src/api/routers/: analysis_router.py  auth_router.py  webhook_router.py
src/api/schemas/: analysis_schemas.py  auth_schemas.py
src/core/: cache.py  celery_app.py  config.py  exceptions.py  logging.py  security.py
src/db/: base.py  database.py  models.py  repositories.py
src/services/: analysis_service.py
src/tasks/: analysis_tasks.py
tests/: conftest.py
tests/integration/: test_analysis_flow.py  test_auth.py  test_repositories.py  test_secret_detector.py  test_webhook.py
tests/unit/: test_ast_analyzer.py  test_llm_client.py  test_security.py
